httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-httproute
  namespace: unifi
spec:
  parentRefs:
  - name: gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - network.sternberg.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: unifi-tls-backend
      namespace: unifi
