ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: unifi.some-domain.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
  tls:
    - hosts:
        - unifi.some-domain.dev
      secretName: unifi-cert
